# grants_tagger_light

./: .gitignore  .pre-commit-config.yaml  README.md  bertmesh_before_retagging.dvc  ll.Artificial Intelligence.curation.json  pyproject.toml
.dvc/: config
.github/workflows/: qa.yml  tests.yaml
data/grants_comparison/: .gitignore  comparison.csv.dvc  mesh_tree_letters_list.txt  meshterms_list.txt.dvc
data/interim/: .gitignore
data/processed/: .gitignore
data/raw/: .gitignore  active_grants_last_5_years.csv.dvc  allMeSH_2021.jsonl.dvc  retagging.dvc
examples/: augment.sh  augment_specific_tags.sh  preprocess_and_train_by_epochs.sh  preprocess_and_train_by_steps.sh  preprocess_splitting_by_fract.sh  preprocess_splitting_by_rows.sh  preprocess_splitting_by_years.sh  resume_train_by_epoch.sh  resume_train_by_steps.sh  retag.sh  train_by_epochs.sh  train_by_steps.sh
grants_tagger/: cli.py
grants_tagger/evaluation/: __init__.py
grants_tagger/models/: bert_mesh.py  create_model_transformer.py
grants_tagger/preprocessing/: preprocess_mesh.py  preprocess_wellcome.py
grants_tagger_light/: __main__.py  cli.py  download_epmc.py  label_binarizer.py  predict.py  split_data.py  streamlit_visualize.py  tune_threshold.py  utils.py
grants_tagger_light/augmentation/: JsonParser.py  __init__.py  augment.py  augment_openai.py  prompt.template
grants_tagger_light/bertmesh/: __init__.py  evaluate.py  model.py  prepare_data.py  train.py  train_torch.py
grants_tagger_light/evaluation/: __init__.py  evaluate_human.py  evaluate_mesh_on_grants.py  evaluate_model.py  evaluate_mti.py  utils.py
grants_tagger_light/models/: bert_mesh.py  create_model_transformer.py  utils.py
grants_tagger_light/preprocessing/: __init__.py  preprocess_mesh.py  preprocess_wellcome.py
grants_tagger_light/retagging/: __init__.py  cnn_gpu_config.cfg  config.cfg  retagging.py  retagging_spacy.py
grants_tagger_light/training/: __init__.py  custom_trainer.py  dataloaders.py  train.py  train_args.py
grants_tagger_light/utils/: __init__.py  benchmark.py  sharding.py  split_data.py  utils.py  years_tags_parser.py
models/: .gitignore  xlinear-0.2.5.dvc
scripts/: calc_comparison_metrics.py  convert_pubmed_to_jsonl.py  create_grants_sample.py  create_inclusion_list.py  create_prodigy_data.py  create_pubs_sample_for_evaluation.py  create_xlinear_bertmesh_comparison_csv.py  evaluation_ss.py  jsonl_preprocessing.py  mesh_json_to_jsonl.py  mesh_to_jsonl.py  meshterms_list.txt  preprocess.sh  preprocess_splitting_by_years.sh  resume_train.sh  resume_train_by_epoch.sh  resume_train_by_steps.sh  save_local_from_hub.py  train.sh  train_bertmesh_script.py  train_by_epochs.sh  train_by_steps.sh  upload_grants_data_to_argilla.py
tests/: test_augment.py  test_download_epmc.py  test_evaluate_human.py  test_evaluate_mesh_on_grants.py  test_evaluate_model.py  test_evaluate_mti.py  test_pipeline.py  test_predict.py  test_preprocess_mesh.py  test_preprocess_wellcome.py  test_retagging.py  test_split_data.py  test_train.py  test_tune_threshold.py
(+33 files in other folders)
