[tool.poetry]
name = "grants-tagger-light"
version = "0.1.0"
description = "Train and use BERT models for tagging grants with MeSH terms."
authors = ["Andrei Apostol <andrei@mantisnlp.com>"]
readme = "README.md"
packages = [{include = "grants_tagger_light"}]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"
transformers = "4.29.2"
scikit-learn = "1.2.2"
pandas = "1.5.3"
wasabi = "1.1.1"
torch = {version = "^2.0.1+cpu", source = "torch-cpu"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.270"
pre-commit = "^3.3.2"


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
