[tool.poetry]
name = "grants-tagger-light"
version = "0.1.0"
description = "Train and use BERT models for tagging grants with MeSH terms."
authors = ["Andrei Apostol <andrei@mantisnlp.com>"]
readme = "README.md"
packages = [{include = "grants_tagger_light"}]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"
scikit-learn = "1.5.0"
pandas = "1.5.3"
wasabi = "1.1.1"
typer = "^0.9.0"
datasets = "2.13.1"
accelerate = "^0.19.0"
dvc = {extras = ["s3"], version = "^2.58.2"}
# torch-cpu is not available anymore!
# torch = {version = "2.0.1", source = "torch-cpu"}
torch = "2.0.1"
transformers = "4.29.2"
libpecos = "^1.0.0"
loguru = "^0.7.0"
wandb = "^0.15.4"
openai = "0.27.8"
openai-multi-client = "^0.1.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.270"
pre-commit = "^3.3.2"


[tool.poetry.group.scripts]
optional = true

[tool.poetry.group.scripts.dependencies]
awswrangler = "^3.1.1"
argilla = "^1.8.0"


[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
torch = {version = "2.0.1+cu117", source = "torch-gpu"}


[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grants-tagger = "grants_tagger_light.cli:app"
